<resources>
    <string name="app_name">Tactus</string>
    <string name="login">Log in</string>
    <string name="register">register</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="inValidCredentials">please enter valid credentials</string>
    <string name="firstName">First name</string>
    <string name="Insertion">Insertion</string>
    <string name="Lastname">Last name</string>
    <string name="date">Day/Month/Year</string>
    <string name="Dateofbirth">Date of birth</string>
    <string name="Email">Email address</string>
    <string name="emailExample">mail@example.com</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="createAccount">Create account</string>
    <string name="profile">My profile</string>
    <string name="changeData">change data</string>
    <string name="registerAlertDialogTitle">Something went wrong!</string>
    <string name="emailInvalid">- Email is invalid</string>
    <string name="registerPasswordInvalid">- Password is invalid (min 8 characters, at least 1 letter and number, confirmation needs to be equal)</string>
    <string name="emptyNameOrDate">- Name and/or date of birth are still empty</string>
    <string name="alertDialogCancelButton" translatable="false">OK</string>
    <string name="userSettings">User settings</string>
    <string name="change">Change </string>
    <string name="saveChanges">Save </string>
    <string name="logOut">Log out</string>
    <string name="adress">Address (street + house number)</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="userSettingsCurrentPasswordInvalid">Invalid password!</string>
    <string name="userSettingsNewPasswordInvalid">Needs to be longer than 8 characters and contain at least one number and letter</string>
    <string name="userSettingsConfirmPasswordInvalid">Needs to match new password</string>
    <string name="userSettingsFieldInvalid">Field cannot be empty!</string>
    <string name="userSettingsCurrentPassword">Current password</string>
    <string name="userSettingsNewPassword">New password</string>
    <string name="userSettingsConfirmPassword">Confirm new password</string>
    <string name="goals">My personal goals</string>
    <string name="add">Add</string>
    <string name="newGoal">New goal</string>
    <string name="risks">My personal risks</string>
    <string name="newRisk">New risk</string>
    <string name="invalidPhoneNr">Invalid phone number!</string>
    <string name="fieldNotFilledIn">[Not filled in]</string>
    <string name="city">City</string>
    <string name="zipCode">Postal address</string>
    <string name="invalidZipCode">Invalid postal address!</string>
    <string name="deleteAccount">Delete account</string>
    <string name="deleteAccountTitle">Are you sure?</string>
    <string name="deleteAccountMessage">If you continue, all of your data will be lost and cannot be recovered!</string>
    <string name="deleteAccountAbort">No, abort</string>
    <string name="deleteAccountConfirm">Yes, delete my account</string>
    <string name="risk">risk:</string>
    <string name="risk_update">update risk</string>
    <string name="somethingWentWrong">Something went wrong, your goal hasn\'t been added</string>
    <string name="somethingWentWrong2">Something went wrong, your goal hasn\'t been changed</string>
    <string name="goal">Goal: </string>
    <string name="changeGoal">Change my goal</string>
    <string name="delete">Delete</string>
    <string name="invalidEmail">Email Already exists</string>
    <string name="invalidCity">Invalid city!</string>
    <string name="invalidAddress">Invalid address!</string>
    <string name="invalidName">Invalid name!</string>
    <string name="emailNotFound">Email not found</string>
    <string name="registerActivityHeader">Create new account</string>
    <string name="homePageActivityHeader">Dashboard</string>
    <string name="consumptionOnDate">Consumption on %1$s:</string>
    <string name="difficultMoments">My difficult moments</string>
    <string name="newMoment">New difficult moment</string>
    <string name="moment">Moment: </string>
    <string name="dateTime">Date and time: </string>
    <string name="taste">Taste in: </string>
    <string name="description">Description: </string>
    <string name="phonenumberActivityHeader">Important phone numbers</string>
    <string name="institute">Institute</string>
    <string name="doctor">Doctor</string>
    <string name="buddy">Buddy</string>
    <string name="ice">Emergency</string>
    <string name="difficult">difficulty</string>
    <string name="riskbutton">My risks</string>
    <string name="goalbutton">My goals</string>
    <string name="phonenumbers">My phonenumbers</string>
    <string name="shrink">Shrink</string>
    <string name="numbernotfilled">Telephone number has not been inserted, do you want to insert it now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contactDr">Please contact your sendBy, number not filled in</string>
    <string name="howAreYou">How are you feeling today?</string>
    <string name="confirm">Confirm</string>
    <string name="descriptionInvalid">Description cannot be empty!</string>
    <string name="smileyNotSelected">Please select a smiley</string>
    <string name="usage">My usage</string>
    <string name="myMessages">My Messages</string>
    <string name="newMessage">New Message</string>
    <string name="message">Message:</string>
    <string name="location">Location:</string>
    <string name="cause">Cause:</string>
    <string name="When">When?</string>
    <string name="howMuch">How much?</string>
    <string name="whatDidYouUse">What did you use?</string>
    <string name="currentlySelected">Currently selected:</string>
    <string name="howMuch2">How much did you use?</string>
    <string name="whereWereYou">Where were you?</string>
    <string name="whatCausedIt">What caused it?</string>
    <string name="feelingAbout">How do you feel about it?</string>
    <string name="amount">Amount:</string>
    <string name="emptyFields">Some fields are still empty!</string>
    <string name="used">There is a usage registered, please contact your psychologist</string>
    <string name="sendBy">Send By:</string>
    <string name="messageNotsend">Something went wrong, your message has not been sent</string>
    <string name="noConnection">No internet connection detected</string>
    <string name="backAgain">Press back again to exit.</string>
    <string name="noInternet">You have no internet.</string>
    <string name="noUsageRegistered">You have not registered any usage. </string>
    <string name="relapse">You have had a relapse, please contact your psychologist</string>
    <string name="thirtyDays">You have not used for a month, keep it up!</string>
    <string name="oneYear">No usage for a year already, we are proud!</string>
    <string name="oneWeek">No usage for a week, good work!</string>
    <string name="oneDay">You haven\'t used for one day, you can do it!</string>
    <string name="already">You are already </string>
    <string name="daysClean"> days clean</string>
    <string name="noFeeling">You haven\'t registered your feeling in two days, please do</string>
    <string name="justNow">Just now</string>
    <string name="insertMessage">Insert message here.</string>
    <string name="sendByMe">You</string>
    <string name="noUsage">You haven\'t registered your usage in two days, please do</string>
    <string name="send">Send</string>
    <string name="desire">How much do you crave it?</string>
    <string name="notMuch">Not much</string>
    <string name="alot">A lot</string>
    <string name="prevent">What have you done to prevent using?</string>
    <string name="weed">weed</string>
    <string name="registerUsage">Register Usage</string>
    <string name="notUsed">Not Used!!</string>
    <string name="logout">Are you sure you want to logout?</string>
    <string name="much">much</string>
    <string name="little">little</string>
    <string name="someThingWentWrongFeeling">Something went wrong, your status hasn\'t been updated</string>
    <string name="psychologist">Psychologist</string>



</resources>
