<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/colorprimary"
        android:elevation="4dp"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/textView_clean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <ImageView
            android:id="@+id/actionBarImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/tactuslogo_big_white"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="2dp"
            android:paddingBottom="5dp"/>

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/textView_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:text="amount of days clean" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_clean">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/messagesButton"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/my_button_bg"
                android:drawablePadding="10dp"
                android:drawableTint="@color/coloraccent"
                android:drawableTop="@drawable/email"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/myMessages"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/call_button"
                app:layout_constraintTop_toBottomOf="@+id/usagebutton" />

            <Button
                android:id="@+id/riskbutton"
                android:layout_width="0dp"
                android:layout_height="175dp"

                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/my_button_bg"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/holo_red_dark"
                android:drawableTop="@drawable/caution_sign"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/riskbutton"
                app:layout_constraintBottom_toTopOf="@+id/situationbutton"
                app:layout_constraintEnd_toStartOf="@+id/goalbutton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/call_button"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/my_button_bg"
                android:drawablePadding="10dp"
                android:drawableTint="@color/coloraccent"
                android:drawableTop="@drawable/phone_call"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/phonenumbers"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/messagesButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/situationbutton" />


            <Button
                android:id="@+id/usagebutton"
                android:layout_width="0dp"
                android:layout_height="175dp"

                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"


                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/my_button_bg"
                android:drawablePadding="10dp"

                android:drawableTint="@color/coloraccent"
                android:drawableTop="@drawable/wine"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/usage"
                app:layout_constraintBottom_toTopOf="@+id/messagesButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/situationbutton"
                app:layout_constraintTop_toBottomOf="@+id/goalbutton" />

            <Button
                android:id="@+id/goalbutton"
                android:layout_width="0dp"
                android:layout_height="175dp"

                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/my_button_bg"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/holo_green_dark"
                android:drawableTop="@drawable/like"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/goalbutton"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/usagebutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/riskbutton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/situationbutton"
                android:layout_width="0dp"
                android:layout_height="174dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/my_button_bg"
                android:drawablePadding="10dp"
                android:drawableTint="@color/coloraccent"
                android:drawableTop="@drawable/thought"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/difficult"
                app:layout_constraintBottom_toTopOf="@+id/call_button"
                app:layout_constraintEnd_toStartOf="@+id/usagebutton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/riskbutton" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>